# ChangeLog for dev-python/ipython
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.43 2007/12/12 16:02:57 hawking Exp $

*ipython-0.8.2 (12 Dec 2007)

  12 Dec 2007; Ali Polatel <hawking@gentoo.org> +ipython-0.8.2.ebuild:
  Version bump, modified emacs depend for emacs-22

*ipython-0.8.1-r1 (24 Oct 2007)

  24 Oct 2007; Ali Polatel <hawking@gentoo.org> files/62ipython-gentoo.el,
  -ipython-0.8.1.ebuild, +ipython-0.8.1-r1.ebuild:
  revbump. fixed site-init file (bug 196859), run
  distutils_pkg_postinst/postrm. drop old

  19 Sep 2007; Ali Polatel <hawking@gentoo.org> ipython-0.6.15.ebuild:
  updated SRC_URI; bug 192906

  26 Jul 2007; Markus Rothe <corsair@gentoo.org> ipython-0.8.1.ebuild:
  Added ~ppc64; bug #186188

*ipython-0.8.1 (10 May 2007)

  10 May 2007; Lukasz Strzygowski <lucass@gentoo.org>
  -ipython-0.7.3-r2.ebuild, -ipython-0.7.3-r3.ebuild, -ipython-0.8.0.ebuild,
  +ipython-0.8.1.ebuild:
  Version bump. Dropped old versions.

*ipython-0.8.0 (22 Apr 2007)

  22 Apr 2007; Rob Cakebread <pythonhead@gentoo.org> +ipython-0.8.0.ebuild:
  Version bump.

  22 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  -files/50ipython-mode-gentoo.el, +files/62ipython-gentoo.el,
  ipython-0.7.3-r2.ebuild, ipython-0.7.3-r3.ebuild:
  changed file name for cosmetics (removed mode) and loading order, so it gets
  loaded after app-emacs/python-mode's site file

  20 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/62ipython-gentoo.el, ipython-0.7.3-r2.ebuild,
  ipython-0.7.3-r3.ebuild:
  changed file name for cosmetics (removed mode) and loading order, so it gets
  loaded after app-emacs/python-mode's site file

*ipython-0.7.3-r3 (17 Feb 2007)

  17 Feb 2007; Lukasz Strzygowski <lucass@gentoo.org>
  ipython-0.7.3-r2.ebuild, +ipython-0.7.3-r3.ebuild:
  Added pkg_postinst/pkg_postrm with elisp-site-regen (bug #167305).
  Fixed trailing whitespace.
