@@ -4,6 +4,6 @@ DIST ipython-0.8.1.tar.gz 1127745 RMD160 974a7584471c3559a8c56d60bc85715f3fd3e07
 DIST ipython-0.8.2.tar.gz 1172098 RMD160 976d8512d68ed4e1bf28ab50e90bcb7777c34e53 SHA1 2923c1f790d41aeacd2442af5de8ab61c43f6167 SHA256 cc673c7cdef38f7ab21ee22e7be5a591b6b6eda590b82f71a74ff8b5103831c4
 EBUILD ipython-0.6.15.ebuild 564 RMD160 5f6618c525a0ee3d5eea01679c4b0669fa36c06a SHA1 90a9fffd9668881174fb8bccb56a3346c12a0280 SHA256 dc4ad87b322484a575740e69cf1b28b6f11e4dc921f2ba6a368f6eb5dda24704
 EBUILD ipython-0.8.1-r1.ebuild 1548 RMD160 94aaf9043e355582c72bdce4a561289112611dee SHA1 f07cdf46f5dae391d4fee7b9611b87e78392b296 SHA256 279108b12282a3aa110b753d0b3f8c2be6ed45c54a6811538e2d86fbb145e8df
-EBUILD ipython-0.8.2.ebuild 1557 RMD160 d0ad1395dc94833d879b57373d2e067bd6ba603f SHA1 7a025ede0c1a403ca2ce5ec43c16f90f8899dd81 SHA256 67a856e494da17d3eef4fdf0d4068db1c1db159eaa8e0b6931d7d204f2433ab9
-MISC ChangeLog 7571 RMD160 6f69e3371c6d14f9d655724a3266d7f0e84632ef SHA1 829b896b13b6ffa2b19eb7b35177e837fb21cbed SHA256 4fb35a5214a124b8b0ff73ccab4be50223b9a2dbdecaad7df2f916234778248a
+EBUILD ipython-0.8.2.ebuild 1546 RMD160 492f270c3de30ab0189ba5efa3739afb869f2da8 SHA1 fd212b9045f6d17751f738b96d89b5136884147c SHA256 46e760d9c9905e9e85a48ca7468481b1c752aa4d8501d450d94d7c8f25621126
+MISC ChangeLog 7707 RMD160 00f3307dcd26970d5ac76b314ad1a6bf72d450c4 SHA1 2226c115fe6c340d20758b4059b104cc0a98cd4e SHA256 47a20d62c0ced8acfc07613ded942ec3525b8b1a5a41fc5e8b2bbb4dd76669d9
 MISC metadata.xml 2253 RMD160 11b7d3c6141b2b4954c942f490e154fa377af775 SHA1 9fbb4853f4f52d1430fabe006a453e0d26dabbff SHA256 cad8d0fb7419d230ecc674fd8b855926903f2343bc1eaeb6f2e0fd4fe3713827
