@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ipython-0.8.2.ebuild,v 1.1 2007/12/12 16:02:57 hawking Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ipython-0.8.2.ebuild,v 1.2 2008/02/23 13:48:39 dev-zero Exp $
 
 NEED_PYTHON=2.3
 
@@ -16,8 +16,8 @@ KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~s390 ~x86"
 IUSE="doc examples emacs gnuplot"
 
 RDEPEND="gnuplot? ( dev-python/gnuplot-py )
-	emacs? ( || ( app-emacs/python-mode
-		>=virtual/emacs-22 ) )
+	emacs? ( app-emacs/python-mode
+		virtual/emacs )
 	dev-python/pexpect"
 DEPEND="${RDEPEND}"
 
