@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/ipython
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.43 2007/12/12 16:02:57 hawking Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/ipython/ChangeLog,v 1.44 2008/02/23 13:48:39 dev-zero Exp $
+
+  23 Feb 2008; Tiziano Müller <dev-zero@gentoo.org> ipython-0.8.2.ebuild:
+  Corrected emacs-dependency (bug #208186, thanks to ulm).
 
 *ipython-0.8.2 (12 Dec 2007)
 
